--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.15.4",
+    "express": "^4.17.1",
     "node-pty": "^0.10.1",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
